--- a/trie/index.html
+++ b/trie/index.html
@@ -19,7 +19,37 @@ class Trie {
 
     node["$"] ++
   }
+
+  most() {
+    let max = 0;
+    let maxWord = null;
+    let visit = (node, word) => {
+      if(node.$ && node.$ > max) {
+        max = node.$
+        maxWord = word
+      }
+
+      for(let p in node) {
+        visit(node[p], word + p)
+      }
+    }
+
+    visit(this.root, '')
+    console.log("maxWord", maxWord, max)
+  }
+}
+
+function randomWord(length) {
+  var s = "";
+  for(let i = 0; i < length; i++) {
+    s+=String.fromCharCode(Math.random() * 26 + 'a'.charCodeAt(0))
+  }
+  return s
 }
 
 let trie = new Trie()
+
+for(let i = 0;i<100000;i++) {
+  trie.insert(randomWord(4))
+}
 </script>
