--- a/kmp/index.html
+++ b/kmp/index.html
@@ -1,19 +1,55 @@
 <script>
   function find(source, pattern) {
-    for(let i = 0; i < source.length; i++) {
-      let matched = true;
-      for(j = 0; j < pattern.length; j++) {
-        if(source[i + j] !== pattern[j]) {
-          matched = false;
-          break;
-        }
+    let table = new Array(pattern.length).fill(0);
+    let k = 0;
+    for(let j = 1; j < pattern.length; j++) {
+      if(pattern[j] === pattern[k]) {
+        k++
+      } else {
+        k=0
       }
-      if(matched) {
+      table[j] = k;
+    }
+    console.log("table",table)
+
+    let j = 0;
+    for(let i = 0; i < source.length; i++) {
+      console.log(source[i], pattern[j], j)
+      if(source[i] === pattern[j]) {
+        j++
+      }else{
+        j=table[j - 1]
+        if(source[i] === pattern[j]){
+          j++
+        }else{
+          j=0
+          if(source[i] === pattern[j]){
+            j++
+          }
+        }
+
+        // while(source[i] !== pattern[j] && j > 0){
+        //   j = table[j - 1]
+        // }
+        // if(source[i] === pattern[j]) {
+        //   j++
+        // }else{
+        //   j=0
+        // }
+
+      }
+
+      if(j===pattern.length) {
         return true
       }
+
     }
     return false
   }
 
+  console.log(find("abababx", 'ababx'))
+  console.log(find("abcabcabx", 'abcabx'))
+  console.log(find("abcaqbcabx", 'abcabx')) // 0 0 0 1 2 0
+  console.log(find("abcababcabx", 'abcabx')) 
   console.log(find("abababx", 'ababx'))
 </script>
